--- a/lib/package.json
+++ b/lib/package.json
@@ -17,17 +17,17 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@langchain/langgraph": "^0.3.11",
-    "@langchain/core": "^0.3.30",
-    "@langchain/ollama": "^0.2.3",
-    "@langchain/openai": "^0.3.15",
     "@langchain/anthropic": "^0.3.15",
+    "@langchain/cohere": "^0.3.3",
+    "@langchain/core": "^0.3.30",
     "@langchain/google-genai": "^0.1.3",
     "@langchain/groq": "^0.1.3",
-    "@langchain/cohere": "^0.3.3",
+    "@langchain/langgraph": "^0.3.11",
+    "@langchain/openai": "^0.3.15",
     "@modelcontextprotocol/sdk": "^1.16.0",
-    "zod": "^3.24.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "ollama": "^0.5.16",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
