chore: Add trading-system to .gitignore
- Exclude trading-system directory from version control
- Code has been moved to new qi-v2-is repository
- Keep qi-v2-agent focused on original AI coding assistant functionality

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ yarn-error.log*
 **/prompt-workflow/
 **/personachat*
 **/large-datasets/
+
+# Trading agents implementation directory
+trading-agents/
+trading-system/
